edit vim 8 proj, gvim 正常运行

--- a/vim-v8.1/gvim/gvim.vcxproj.filters
+++ b/vim-v8.1/gvim/gvim.vcxproj.filters
@@ -292,8 +292,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\vimsrc\src\ObjGXAMD64\vim.res">
+    <ResourceCompile Include="..\vimsrc\src\vim.rc">
       <Filter>资源文件</Filter>
-    </Resource>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
