--- a/vim-v9.0.2103/vim-v9.0.2103/vim-v9.0.2103.vcxproj
+++ b/vim-v9.0.2103/vim-v9.0.2103/vim-v9.0.2103.vcxproj
@@ -61,9 +61,12 @@
     <Import Project="PropertySheet.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <PreprocessorDefinitions>_CONSOLE;WIN32_LEAN_AND_MEAN;WINRT_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -74,7 +77,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;WINVER=0x0501;HAVE_STDINT_H;_WIN32_WINNT=0x0501;_WIN32_WINNT=0x0600;FEAT_JOB_CHANNEL;DYNAMIC_GETTEXT;IS_COMBINING_FUNCTION=utf_iscomposing_uint;DYNAMIC_ICONV;HAVE_PATHDEF;VSNPRINTF=vim_vsnprintf;FEAT_HUGE;INLINE="";WCWIDTH_FUNCTION=utf_uint2cells;_CRT_SECURE_NO_WARNINGS;USE_DYNFILEID;FEAT_GETTEXT;FEAT_CSCOPE;FEAT_TERMINAL;WIN32</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)vim-9.0.2103-src\src; $(SolutionDir)vim-9.0.2103-src\src\proto; $(SolutionDir)vim-9.0.2103-src\src\libvterm\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -109,117 +113,140 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\vim-9.0.2103-src\src\alloc.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\arabic.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\arglist.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\autocmd.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\beval.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\blob.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\blowfish.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\buffer.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\bufwrite.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\change.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\charset.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\cindent.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\clientserver.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\clipboard.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\cmdexpand.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\cmdhist.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\crypt.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\crypt_zip.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\debugger.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\dict.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\diff.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\digraph.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\drawline.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\drawscreen.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\edit.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\eval.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\evalbuffer.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\evalfunc.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\evalvars.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\evalwindow.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ex_cmds.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ex_cmds2.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ex_docmd.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ex_eval.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ex_getln.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\fileio.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\filepath.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\findfile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\float.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\fold.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\getchar.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\gui_xim.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\hardcopy.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\hashtab.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\help.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\highlight.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\if_cscope.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\indent.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\insexpand.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\json.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\list.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\locale.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\logfile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\main.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\map.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\mark.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\match.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\mbyte.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\memfile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\memline.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\menu.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\message.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\misc1.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\misc2.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\mouse.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\move.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\normal.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ops.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\option.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\optionstr.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\os_mswin.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\os_win32.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\popupmenu.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\popupwin.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\profiler.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\quickfix.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\regexp.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\register.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\scriptfile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\screen.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\search.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\session.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\sha256.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\sign.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\spell.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\spellfile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\spellsuggest.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\strings.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\syntax.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\tag.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\term.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\testing.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\textformat.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\textobject.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\textprop.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\time.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\typval.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\ui.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\undo.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\usercmd.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\userfunc.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9class.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9cmds.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9compile.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9execute.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9expr.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9instr.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9script.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\vim9type.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\viminfo.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\winclip.c" />
-<ClCompile Include="..\vim-9.0.2103-src\src\window.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\arabic.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\arglist.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\autocmd.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\beval.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\blob.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\blowfish.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\buffer.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\bufwrite.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\change.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\charset.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\cindent.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\clientserver.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\clipboard.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\cmdexpand.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\cmdhist.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\crypt.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\crypt_zip.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\debugger.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\dict.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\diff.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\digraph.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\drawline.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\drawscreen.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\edit.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\eval.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\evalbuffer.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\evalfunc.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\evalvars.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\evalwindow.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ex_cmds.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ex_cmds2.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ex_docmd.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ex_eval.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ex_getln.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\fileio.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\filepath.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\findfile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\float.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\fold.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\getchar.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\gui_xim.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\hardcopy.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\hashtab.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\help.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\highlight.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\if_cscope.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\indent.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\insexpand.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\iscygpty.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\json.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\encoding.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\keyboard.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\mouse.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\parser.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\pen.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\screen.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\state.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\unicode.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\libvterm\src\vterm.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\list.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\locale.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\logfile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\main.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\map.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\mark.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\match.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\mbyte.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\memfile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\memline.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\menu.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\message.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\misc1.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\misc2.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\mouse.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\move.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\normal.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ObjCAMD64\pathdef.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ops.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\option.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\optionstr.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\os_mswin.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\os_w32exe.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\popupmenu.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\popupwin.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\profiler.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\quickfix.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\regexp.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\register.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\scriptfile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\screen.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\search.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\session.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\sha256.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\sign.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\sound.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\spell.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\spellfile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\spellsuggest.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\strings.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\syntax.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\tag.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\term.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\terminal.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\testing.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\textformat.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\textobject.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\textprop.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\time.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\typval.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\ui.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\undo.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\usercmd.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\userfunc.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\version.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9class.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9cmds.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9compile.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9execute.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9expr.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9instr.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9script.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\vim9type.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\viminfo.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\winclip.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\window.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xdiffi.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xemit.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xhistogram.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xpatience.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xprepare.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xdiff\xutils.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\vim-9.0.2103-src\src\vim.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
