--- a/vim-v9.0.2103/gvim-v9.0.2103/gvim-v9.0.2103.vcxproj
+++ b/vim-v9.0.2103/gvim-v9.0.2103/gvim-v9.0.2103.vcxproj
@@ -62,6 +62,7 @@
     <ClCompile Include="..\vim-9.0.2103-src\src\getchar.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\gui.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\gui_beval.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\gui_dwrite.cpp" />
     <ClCompile Include="..\vim-9.0.2103-src\src\gui_w32.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\gui_xim.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\hardcopy.c" />
@@ -88,6 +89,7 @@
     <ClCompile Include="..\vim-9.0.2103-src\src\misc2.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\mouse.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\move.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\netbeans.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\normal.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\ops.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\option.c" />
@@ -186,6 +188,7 @@
     <ClCompile Include="..\vim-9.0.2103-src\src\os_win32.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\channel.c" />
     <ClCompile Include="..\vim-9.0.2103-src\src\job.c" />
+    <ClCompile Include="..\vim-9.0.2103-src\src\xpm_w32.c" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\vim-9.0.2103-src\src\vim.rc" />
@@ -242,6 +245,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -273,16 +279,16 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>HAVE_STDINT_H;FEAT_IPV6;HAVE_INET_NTOP;DYNAMIC_GETTEXT;FEAT_XPM_W32;FEAT_GUI_MSWIN;NDEBUG;WCWIDTH_FUNCTION=utf_uint2cells;DYNAMIC_DIRECTX;FEAT_NETBEANS_INTG;FEAT_SOUND;_WIN32_WINNT=0x0601;WIN32;FEAT_DIRECTX_COLOR_EMOJI;FEAT_HUGE;FEAT_JOB_CHANNEL;WINVER=0x0601;INLINE="";DYNAMIC_IME;SNPRINTF=vim_snprintf;HAVE_PATHDEF;FEAT_CSCOPE;DYNAMIC_ICONV;FEAT_TERMINAL;FEAT_MBYTE_IME;GET_SPECIAL_PTY_TYPE_FUNCTION=get_special_pty_type;_CRT_SECURE_NO_WARNINGS;IS_COMBINING_FUNCTION=utf_iscomposing_uint;VSNPRINTF=vim_vsnprintf;FEAT_DIRECTX</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)vim-9.0.2103-src\src; $(SolutionDir)vim-9.0.2103-src\src\proto; $(SolutionDir)vim-9.0.2103-src\src\libvterm\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vim-9.0.2103-src\src; $(SolutionDir)vim-9.0.2103-src\src\proto; $(SolutionDir)vim-9.0.2103-src\src\libvterm\include;$(SolutionDir)vim-9.0.2103-src\src\xpm\include</AdditionalIncludeDirectories>
       <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);kernel32.lib;advapi32.lib;shell32.lib;user32.lib;uuid.lib;ole32.lib;comctl32.lib;gdi32.lib;oleaut32.lib;oldnames.lib;comdlg32.lib;netapi32.lib;winmm.lib;version.lib;imm32.lib;winspool.lib;comctl32.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);kernel32.lib;advapi32.lib;shell32.lib;user32.lib;uuid.lib;ole32.lib;comctl32.lib;gdi32.lib;oleaut32.lib;oldnames.lib;comdlg32.lib;netapi32.lib;winmm.lib;version.lib;imm32.lib;winspool.lib;ws2_32.lib;$(SolutionDir)vim-9.0.2103-src\src\xpm\$(LibrariesArchitecture)\lib-vc14\libXpm.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
